--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.2",
+    "p-min-delay": "^4.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
